--- a/locales/sr/translation.json
+++ b/locales/sr/translation.json
@@ -6,7 +6,7 @@
 		"menuoption3":"Menu option 3"
 	},
 	"navbar":{
-		"brand":"SmartPark",
+		"brand":"aSmartPark",
 		"brandlink":"http://www.audiotexdoo.ba",
 		"home":"Početna",
 		"dashboard":"Pregled",
@@ -35,10 +35,10 @@
 		"1":"ON"
 	},
 	"about":{
-		"title":"About SmartPark"
+		"title":"About aSmartPark"
 	},
 	"index":{
-		"title":"Dobrodošli u SmartPark",
+		"title":"Dobrodošli u aSmartPark",
 		"dashboard":"Pregled",
 		"description":"Vaš pogled na parking..."
 	},
