--- a/locales/sr/translation.json
+++ b/locales/sr/translation.json
@@ -10,6 +10,7 @@
 		"brandlink":"http://www.audiotexdoo.ba",
 		"home":"Početna",
 		"dashboard":"Pregled",
+		"nfc":"NFC",
 		"about":"O nama"
 	},
 	"common":{
@@ -36,6 +37,9 @@
 	},
 	"about":{
 		"title":"About aSmartPark"
+	},
+	"nfc":{
+		"title":"NFC"
 	},
 	"index":{
 		"title":"Dobrodošli u aSmartPark",
