--- a/locales/dev/translation.json
+++ b/locales/dev/translation.json
@@ -48,12 +48,10 @@
 		"getFirmwareVersion":"Get firmware version",
 		"getTrigState":"Get trig state",
 		"getRelayState":"Get relay state",
-<<<<<<< HEAD
 		"setRelayState":"Set relay state",
-=======
-	    "setRelayState":"Set relay state",
->>>>>>> refs/remotes/origin/drazen
-		"masterAcknowledge":"Master acknowledge"			
+		"masterAcknowledge":"Master acknowledge",			
+	    "getParameterRSSI":"Get parameter RSSI",
+	    "setParameterRSSI":"Set parameter RSSI"
 	},
 	"index":{
 		"title":"Welcome to aSmartPark",
