--- a/locales/dev/translation.json
+++ b/locales/dev/translation.json
@@ -52,6 +52,7 @@
 		"masterAcknowledge":"Master acknowledge",			
 	    "getParameterRSSI":"Get parameter RSSI",
 	    "setParameterRSSI":"Set parameter RSSI"
+	    "getIDBuffer":"Get ID Buffer"
 	},
 	"index":{
 		"title":"Welcome to aSmartPark",
