--- a/locales/sr/translation.json
+++ b/locales/sr/translation.json
@@ -11,7 +11,7 @@
 		"home":"Početna",
 		"dashboard":"Pregled",
 		"nfc":"NFC",
-		"documentation":"dokumentacija",
+		"documentation":"Dokumentacija",
 		"about":"O nama"
 	},
 	"common":{
